--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@reduxjs/toolkit": "^2.5.1",
     "@tanstack/react-query": "^5.66.9",
+    "@types/axios": "^0.14.4",
     "axios": "^1.7.9",
     "framer-motion": "^12.4.7",
     "react": "^19.0.0",
